--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<!-- index.html (placeholder) -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>BlockTune</title>
+  </head>
+  <body>
+    <h1>Bienvenue sur BlockTune !</h1>
+    <p>Site en ligne avec Render & GitHub.</p>
+  </body>
+</html>
