--- a/blog.html
+++ b/blog.html
@@ -1,1 +1,45 @@
-<!-- blog.html (placeholder) -->
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Blog - BlockTune</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1>Articles BlockTune</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="tarifs.html">Tarifs</a></li>
+        <li><a href="commande.html">Commander</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <section>
+      <article>
+        <h2>🎧 Pourquoi le mixage est crucial ?</h2>
+        <p>Un bon mixage fait toute la différence entre un son amateur et un son pro. Chez BlockTune, chaque détail est soigné.</p>
+      </article>
+
+      <article>
+        <h2>🚀 Gagne du temps, booste ta carrière</h2>
+        <p>Confie-nous le mix et consacre ton énergie à créer et promouvoir ta musique.</p>
+      </article>
+
+      <article>
+        <h2>🔒 Mix pro & confidentialité</h2>
+        <p>Ton projet reste confidentiel. Aucun partage, aucun leak. Tu gardes le contrôle à 100 %.</p>
+      </article>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 BlockTune - Tous droits réservés</p>
+  </footer>
+</body>
+</html>
