--- a/tarifs.html
+++ b/tarifs.html
@@ -1,1 +1,61 @@
-<!-- tarifs.html (placeholder) -->
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tarifs - BlockTune</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1>Nos Tarifs</h1>
+    <nav>
+      <a href="index.html">Accueil</a>
+      <a href="commande.html">Commander</a>
+      <a href="contact.html">Contact</a>
+      <a href="blog.html">Blog</a>
+    </nav>
+  </header>
+
+  <main>
+    <section class="pricing">
+      <div class="card">
+        <h2>Mix</h2>
+        <p class="price">60€ (en crypto)</p>
+        <ul>
+          <li>Équilibrage pro</li>
+          <li>Nettoyage des pistes</li>
+          <li>Effets créatifs</li>
+          <li>Jusqu’à 3 révisions</li>
+        </ul>
+      </div>
+
+      <div class="card">
+        <h2>Mastering</h2>
+        <p class="price">40€ (en crypto)</p>
+        <ul>
+          <li>Mastering stéréo</li>
+          <li>Optimisation loudness</li>
+          <li>Compatibilité plateformes</li>
+          <li>Jusqu’à 3 révisions</li>
+        </ul>
+      </div>
+
+      <div class="card">
+        <h2>Mix + Mastering</h2>
+        <p class="price">90€ (en crypto)</p>
+        <ul>
+          <li>Mixage complet</li>
+          <li>Mastering pro</li>
+          <li>Effets créatifs</li>
+          <li>Jusqu’à 3 révisions</li>
+        </ul>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; BlockTune - Tous droits réservés</p>
+  </footer>
+</body>
+</html>
