--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 <div id="loader">
   <img src="logo_blocktune.png" alt="Logo BlockTune">
 </div>
-  <header>
-    <img src="logo_blocktune.png" alt="BlockTune Logo" class="logo">
+  <header class="navbar">
+  <a href="index.html">
+    <img src="logo_blocktune.png" alt="BlockTune Logo">
+  </a>
     <nav>
       <ul>
         <li><a href="index.html">Accueil</a></li>
