--- a/commande.html
+++ b/commande.html
@@ -10,8 +10,10 @@
   <script defer src="script.js"></script>
 </head>
 <body>
-  <header>
-    <img src="logo_blocktune.png" alt="BlockTune Logo" class="logo">
+  <header class="navbar">
+  <a href="index.html">
+    <img src="logo_blocktune.png" alt="BlockTune Logo">
+  </a>
     <nav>
       <ul>
         <li><a href="index.html">Accueil</a></li>
