--- a/contact.html
+++ b/contact.html
@@ -9,8 +9,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <img src="logo_blocktune.png" alt="BlockTune Logo" class="logo">
+  <header class="navbar">
+  <a href="index.html">
+    <img src="logo_blocktune.png" alt="BlockTune Logo">
+  </a>
     <nav>
       <ul>
         <li><a href="index.html">Accueil</a></li>
