--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </div>
   <header class="navbar">
   <a href="index.html">
-    <img src="logo_blocktune.png" alt="BlockTune Logo">
+    <img src="logo_blocktune.png" alt="Logo BlockTune" class="logo">
   </a>
     <nav>
       <ul>
