--- a/a-propos.html
+++ b/a-propos.html
@@ -27,7 +27,7 @@
 
   <main class="about-page">
     <section class="profil">
-      <img src="profil.jpg" alt="Chicho" class="photo-arrondie">
+      <img src="Profil.jpg" alt="Chicho" class="photo-arrondie">
       <div class="bio">
         <p>
           Je m’appelle Chicho.  
