--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="BlockTune – Mix/Mastering pro en crypto – Sans KYC">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="description" content="BlockTune – Mix/Mastering pro en crypto – Sans KYC"/>
   <title>BlockTune</title>
-  <link rel="icon" href="favicon.ico">
-  <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="favicon.ico" />
+  <link rel="stylesheet" href="style.css" />
   <script src="script.js" defer></script>
 </head>
 <body>
 
   <!-- Sélecteur de langue -->
-  <div class="lang-switcher" style="text-align: right; padding: 10px 20px;">
+  <div class="lang-switcher">
     <select onchange="window.location.href=this.value">
       <option value="#" selected>Français</option>
       <option value="#">English</option>
@@ -28,14 +28,9 @@
     <a href="index.html">
       <img src="logo_blocktune.png" alt="Logo BlockTune" class="logo">
     </a>
-
+    
     <nav>
-      <div class="burger" id="burger">
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
-      <ul id="nav-links">
+      <ul class="nav-links">
         <li><a href="index.html">Accueil</a></li>
         <li><a href="a-propos.html">À propos</a></li>
         <li><a href="tarifs.html">Tarifs</a></li>
@@ -43,6 +38,11 @@
         <li><a href="blog.html">Blog</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
+      <div class="burger" id="burger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
     </nav>
   </header>
 
