--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
   <!-- Sélecteur de langue -->
-  <div class="lang-switcher">
+  <div class="lang-switcher" style="text-align: right; padding: 10px 20px;">
     <select onchange="window.location.href=this.value">
       <option value="#" selected>Français</option>
       <option value="#">English</option>
@@ -28,9 +28,9 @@
     <a href="index.html">
       <img src="logo_blocktune.png" alt="Logo BlockTune" class="logo">
     </a>
-    
-    <nav>
-      <ul class="nav-links">
+
+    <nav class="nav-container">
+      <ul class="nav-links" id="nav-links">
         <li><a href="index.html">Accueil</a></li>
         <li><a href="a-propos.html">À propos</a></li>
         <li><a href="tarifs.html">Tarifs</a></li>
@@ -39,9 +39,9 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
       <div class="burger" id="burger">
-        <span></span>
-        <span></span>
-        <span></span>
+        <div></div>
+        <div></div>
+        <div></div>
       </div>
     </nav>
   </header>
