--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
       <img src="logo_blocktune.png" alt="Logo BlockTune" class="logo">
     </a>
 
+    <!-- Menu burger déplacé ici -->
+    <div class="burger" id="burger">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+
     <nav class="nav-container">
       <ul class="nav-links" id="nav-links">
         <li><a href="index.html">Accueil</a></li>
@@ -38,11 +45,6 @@
         <li><a href="blog.html">Blog</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
-      <div class="burger" id="burger">
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
     </nav>
   </header>
 
