--- a/index.html
+++ b/index.html
@@ -29,13 +29,6 @@
       <img src="logo_blocktune.png" alt="Logo BlockTune" class="logo">
     </a>
 
-    <!-- Menu burger déplacé ici -->
-    <div class="burger" id="burger">
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
-
     <nav class="nav-container">
       <ul class="nav-links" id="nav-links">
         <li><a href="index.html">Accueil</a></li>
@@ -46,6 +39,13 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
+
+    <!-- Burger menu à droite pour mobile -->
+    <div class="burger" id="burger">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
   </header>
 
   <!-- Contenu principal -->
