--- a/index.html
+++ b/index.html
@@ -31,20 +31,25 @@
 
     <nav class="nav-container">
       <ul class="nav-links" id="nav-links">
-        <li><a href="index.html">Accueil</a></li>
-        <li><a href="a-propos.html">À propos</a></li>
-        <li><a href="tarifs.html">Tarifs</a></li>
-        <li><a href="commande.html">Commande</a></li>
-        <li><a href="blog.html">Blog</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="index.html"><span class="chevron">›</span> Accueil</a></li>
+        <li><a href="a-propos.html"><span class="chevron">›</span> À propos</a></li>
+        <li><a href="tarifs.html"><span class="chevron">›</span> Tarifs</a></li>
+        <li><a href="commande.html"><span class="chevron">›</span> Commande</a></li>
+        <li><a href="blog.html"><span class="chevron">›</span> Blog</a></li>
+        <li><a href="contact.html"><span class="chevron">›</span> Contact</a></li>
       </ul>
     </nav>
 
-    <!-- Burger menu à droite pour mobile -->
+    <!-- Burger menu (3 traits) -->
     <div class="burger" id="burger">
       <div></div>
       <div></div>
       <div></div>
+    </div>
+
+    <!-- Bouton croix caché par défaut -->
+    <div class="close-menu" id="close-menu" style="display: none;">
+      ✕
     </div>
   </header>
 
