--- a/index.html
+++ b/index.html
@@ -20,12 +20,42 @@
     <!-- Menu -->
     <nav class="nav-container">
       <ul class="nav-links" id="nav-links">
-        <li><a href="index.html"><span class="nav-item-text">Accueil</span><span class="chevron mobile-only">›</span></a></li>
-        <li><a href="a-propos.html"><span class="nav-item-text">À propos</span><span class="chevron mobile-only">›</span></a></li>
-        <li><a href="tarifs.html"><span class="nav-item-text">Tarifs</span><span class="chevron mobile-only">›</span></a></li>
-        <li><a href="commande.html"><span class="nav-item-text">Commande</span><span class="chevron mobile-only">›</span></a></li>
-        <li><a href="blog.html"><span class="nav-item-text">Blog</span><span class="chevron mobile-only">›</span></a></li>
-        <li><a href="contact.html"><span class="nav-item-text">Contact</span><span class="chevron mobile-only">›</span></a></li>
+        <li>
+          <a href="index.html">
+            <span class="nav-item-text">Accueil</span>
+            <span class="chevron mobile-only">›</span>
+          </a>
+        </li>
+        <li>
+          <a href="a-propos.html">
+            <span class="nav-item-text">À propos</span>
+            <span class="chevron mobile-only">›</span>
+          </a>
+        </li>
+        <li>
+          <a href="tarifs.html">
+            <span class="nav-item-text">Tarifs</span>
+            <span class="chevron mobile-only">›</span>
+          </a>
+        </li>
+        <li>
+          <a href="commande.html">
+            <span class="nav-item-text">Commande</span>
+            <span class="chevron mobile-only">›</span>
+          </a>
+        </li>
+        <li>
+          <a href="blog.html">
+            <span class="nav-item-text">Blog</span>
+            <span class="chevron mobile-only">›</span>
+          </a>
+        </li>
+        <li>
+          <a href="contact.html">
+            <span class="nav-item-text">Contact</span>
+            <span class="chevron mobile-only">›</span>
+          </a>
+        </li>
       </ul>
     </nav>
 
@@ -37,9 +67,7 @@
     </div>
 
     <!-- Croix (fermer menu) -->
-    <div class="close-menu" id="close-menu">
-      ✕
-    </div>
+    <div class="close-menu" id="close-menu">✕</div>
   </header>
 
   <!-- Contenu principal -->
