--- a/a-propos.html
+++ b/a-propos.html
@@ -93,7 +93,7 @@
 
   <main>
     <section class="profil">
-      <img src="profil.jpg" alt="Chicho" class="about-image" />
+      <img src="Profil.jpg" alt="Chicho" class="about-image" />
       <div class="bio">
         <p>Je m’appelle Chicho. Mon studio, c’est ma chambre. Mon son, c’est mon monde.</p>
         <p>Je mixe depuis plus de 10 ans avec les meilleurs outils professionnels du marché. Chaque son que je traite, je le pousse à son niveau maximal.</p>
