--- a/tarifs.html
+++ b/tarifs.html
@@ -1,30 +1,45 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="description" content="Tarifs de mix/mastering BlockTune" />
   <title>Tarifs – BlockTune</title>
-  <meta name="description" content="Tarifs de mix/mastering BlockTune">
-  <link rel="icon" href="favicon.ico">
-  <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="favicon.ico" />
+  <link rel="stylesheet" href="style.css" />
+  <script src="script.js" defer></script>
 </head>
 <body>
+
+  <!-- Header harmonisé -->
   <header class="navbar">
-  <a href="index.html">
-    <img src="logo_blocktune.png" alt="BlockTune Logo">
-  </a>
-    <nav>
-      <ul>
-        <li><a href="index.html">Accueil</a></li>
-        <li><a href="a-propos.html">À propos</a></li>
-        <li><a href="tarifs.html" class="active">Tarifs</a></li>
-        <li><a href="commande.html">Commande</a></li>
-        <li><a href="blog.html">Blog</a></li>
-        <li><a href="contact.html">Contact</a></li>
+    <a href="index.html">
+      <img src="logo_blocktune.png" alt="Logo BlockTune" class="logo">
+    </a>
+
+    <nav class="nav-container">
+      <ul class="nav-links" id="nav-links">
+        <li><a href="index.html"><span class="nav-item-text">Accueil</span></a></li>
+        <li><a href="a-propos.html"><span class="nav-item-text">À propos</span></a></li>
+        <li><a href="tarifs.html" class="active"><span class="nav-item-text">Tarifs</span></a></li>
+        <li><a href="commande.html"><span class="nav-item-text">Commande</span></a></li>
+        <li><a href="blog.html"><span class="nav-item-text">Blog</span></a></li>
+        <li><a href="contact.html"><span class="nav-item-text">Contact</span></a></li>
       </ul>
     </nav>
+
+    <!-- Menu burger -->
+    <div class="burger" id="burger">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+
+    <!-- Croix fermeture -->
+    <div class="close-menu" id="close-menu">✕</div>
   </header>
 
+  <!-- Contenu principal -->
   <main class="tarifs">
     <h1>Nos Forfaits</h1>
     <div class="tarif-boxes">
@@ -53,5 +68,6 @@
   <footer>
     <p>&copy; 2025 BlockTune. Tous droits réservés.</p>
   </footer>
+
 </body>
 </html>
